--- a/target.css
+++ b/target.css
@@ -1,4 +1,4 @@
-.no_margin { margin: 0px; margin-bottom: 0px !important; } /* remove completamente o margin */
+.no_margin { margin: 0px; margin-bottom: 0px !important; } /* remove completamente o margin glauquets */
 .red { background-color: #ff0000; }  /* cor de fundo vermelha */
 .orange { background-color: #f8b306; }  /* cor de fundo laranja */
 .purple { background-color: #8a2be2; }  /* cor de fundo roxa */
