--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,7 +11,7 @@
 .full_w { width: 100%; }  /* adiciona uma largura de 100% */
 .h_80 { height: 80px; }  /* adiciona uma altura de 80px */
 .w_80 { width: 80px; }  /* adiciona uma largura de 80px */
-.no_p { padding: 0; }  /* remove todo o padding */
+.no_p { padding: 0px; }  /* remove todo o padding */
 .p_t_20 { padding-top: 20px; }  /* adiciona um padding top de 20px */
 .p_b_20 { padding-bottom: 20px; }  /* adiciona um padding bottom de 20px */
 .p_l_20 { padding-left: 20px; }  /* adiciona um padding left de 20px */
